unpackaged/main/default/objects/Vehicle_Receiving_Info__c/Vehicle_Receiving_Info__c.object-meta.xml
<CustomObject>
    <label>Vehicle Receiving Info</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Vehicle Receiving Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Receiving Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>