unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/A_C_Functionality__c.field-meta.xml
<CustomField>
    <fullName>A_C_Functionality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A/C Functionality</label>
    <type>Checkbox</type>
</CustomField>