unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oil leaks</fullName>
            </value>
            <value>
                <fullName>Coolant leaks</fullName>
            </value>
            <value>
                <fullName>Transmission fluid leaks</fullName>
            </value>
            <value>
                <fullName>Other warning lights on the dashboard (besides the check engine light)</fullName>
            </value>
            <value>
                <fullName>Vehicle pulling to one side</fullName>
            </value>
            <value>
                <fullName>Strange noises when turning</fullName>
            </value>
            <value>
                <fullName>Rough or bumpy ride</fullName>
            </value>
            <value>
                <fullName>Steering vibration</fullName>
            </value>
            <value>
                <fullName>Squeaking or grinding brakes</fullName>
            </value>
            <value>
                <fullName>Soft or spongy brake pedal</fullName>
            </value>
            <value>
                <fullName>ABS warning light on</fullName>
            </value>
            <value>
                <fullName>Flat tire</fullName>
            </value>
            <value>
                <fullName>Vibration at certain speeds</fullName>
            </value>
            <value>
                <fullName>Uneven tire wear</fullName>
            </value>
            <value>
                <fullName>Tire pressure problems</fullName>
            </value>
            <value>
                <fullName>Wheel balancing issues</fullName>
            </value>
            <value>
                <fullName>Battery failure</fullName>
            </value>
            <value>
                <fullName>Self starter failure</fullName>
            </value>
            <value>
                <fullName>Electrical shorts</fullName>
            </value>
            <value>
                <fullName>Power windows or locks not working</fullName>
            </value>
            <value>
                <fullName>Unusual or excessive exhaust smoke</fullName>
            </value>
            <value>
                <fullName>Problems with emissions control systems</fullName>
            </value>
            <value>
                <fullName>Checking for leaks in the exhaust system</fullName>
            </value>
            <value>
                <fullName>Check engine light on</fullName>
            </value>
            <value>
                <fullName>Engine overheating</fullName>
            </value>
            <value>
                <fullName>Strange noises from the engine</fullName>
            </value>
            <value>
                <fullName>Rough idling</fullName>
            </value>
            <value>
                <fullName>Transmission slipping</fullName>
            </value>
            <value>
                <fullName>Difficulty shifting gears</fullName>
            </value>
            <value>
                <fullName>Unusual noises during gear changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>