unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Floor_Mats__c.field-meta.xml
<CustomField>
    <fullName>Floor_Mats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Mats</label>
    <type>Checkbox</type>
</CustomField>