unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Infotainment_System_Screen__c.field-meta.xml
<CustomField>
    <fullName>Infotainment_System_Screen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infotainment System Screen</label>
    <type>Checkbox</type>
</CustomField>