unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Jack__c.field-meta.xml
<CustomField>
    <fullName>Jack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jack</label>
    <type>Checkbox</type>
</CustomField>