unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vehicle Receiving Infos</relationshipLabel>
    <relationshipName>Vehicle_Receiving_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>