unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Possible_causes__c.field-meta.xml
<CustomField>
    <fullName>Possible_causes__c</fullName>
    <label>Possible causes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuel pump defect</fullName>
            </value>
            <value>
                <fullName>Battery malfunction</fullName>
            </value>
            <value>
                <fullName>Self starter motor malfunction</fullName>
            </value>
            <value>
                <fullName>Sensor fault</fullName>
            </value>
            <value>
                <fullName>Battery failure</fullName>
            </value>
            <value>
                <fullName>Dynamo malfunction</fullName>
            </value>
            <value>
                <fullName>Self starter failure</fullName>
            </value>
            <value>
                <fullName>Axle gear problem</fullName>
            </value>
            <value>
                <fullName>Axle boot cut ( snoozing sound )</fullName>
            </value>
            <value>
                <fullName>Engine or gear mounting broken</fullName>
            </value>
            <value>
                <fullName>Fuel supply interruption</fullName>
            </value>
            <value>
                <fullName>Computer fault</fullName>
            </value>
            <value>
                <fullName>Gear problem</fullName>
            </value>
            <value>
                <fullName>Air filter clogged</fullName>
            </value>
            <value>
                <fullName>Throttle body problem</fullName>
            </value>
            <value>
                <fullName>Spark plugs problem</fullName>
            </value>
            <value>
                <fullName>Coolant boiling</fullName>
            </value>
            <value>
                <fullName>Cold Weather or Extended Idling</fullName>
            </value>
            <value>
                <fullName>Clogged fuel filter</fullName>
            </value>
            <value>
                <fullName>Fuel pump problem</fullName>
            </value>
            <value>
                <fullName>Rich Fuel Mixture</fullName>
            </value>
            <value>
                <fullName>Incomplete Combustion</fullName>
            </value>
            <value>
                <fullName>Excessive EGR System Flow</fullName>
            </value>
            <value>
                <fullName>Turbocharger Issues</fullName>
            </value>
            <value>
                <fullName>Burning Oil</fullName>
            </value>
            <value>
                <fullName>Excessive Blow-by</fullName>
            </value>
            <value>
                <fullName>Coolant Leak into the Combustion Chamber( cylinder head gasket)</fullName>
            </value>
            <value>
                <fullName>Incorrect Fuel Additives</fullName>
            </value>
            <value>
                <fullName>Fuel System Issues</fullName>
            </value>
            <value>
                <fullName>Wheel Imbalance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>