unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Radio_Knobs_Panel__c.field-meta.xml
<CustomField>
    <fullName>Radio_Knobs_Panel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Radio Knobs/Panel</label>
    <type>Checkbox</type>
</CustomField>