unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Service_Book__c.field-meta.xml
<CustomField>
    <fullName>Service_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Book</label>
    <type>Checkbox</type>
</CustomField>