unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Symptom_Type__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Type__c</fullName>
    <label>Symptom Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preventative</fullName>
            </value>
            <value>
                <fullName>Corrective or Breakdown</fullName>
            </value>
            <value>
                <fullName>Accident Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>