unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fluid Leaks</fullName>
            </value>
            <value>
                <fullName>Schedule A - Minor</fullName>
            </value>
            <value>
                <fullName>Schedule B – Minor</fullName>
            </value>
            <value>
                <fullName>Schedule C - Major</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Warning Lights</fullName>
            </value>
            <value>
                <fullName>Suspension and Steering Issues</fullName>
            </value>
            <value>
                <fullName>Braking System Issues</fullName>
            </value>
            <value>
                <fullName>Tire and Wheel Issues</fullName>
            </value>
            <value>
                <fullName>Electrical System Issues</fullName>
            </value>
            <value>
                <fullName>Exhaust Emissions</fullName>
            </value>
            <value>
                <fullName>Engine-related Issues</fullName>
            </value>
            <value>
                <fullName>Transmission-related Issues</fullName>
            </value>
            <value>
                <fullName>Fuel System Issues</fullName>
            </value>
            <value>
                <fullName>Remote Key/Keyless Entry Issues</fullName>
            </value>
            <value>
                <fullName>Communication Systems</fullName>
            </value>
            <value>
                <fullName>Entertainment and Infotainment Systems</fullName>
            </value>
            <value>
                <fullName>Dashboard Display and Controls</fullName>
            </value>
            <value>
                <fullName>Drivetrain Issues</fullName>
            </value>
            <value>
                <fullName>Windshield and Wipers</fullName>
            </value>
            <value>
                <fullName>Exterior and Visual Inspection</fullName>
            </value>
            <value>
                <fullName>Interior Issues</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Issues</fullName>
            </value>
            <value>
                <fullName>1-gear problem</fullName>
                <isActive>false</isActive>
                <label>1-gear problem</label>
            </value>
            <value>
                <fullName>ABS Warning Light</fullName>
                <isActive>false</isActive>
                <label>ABS Warning Light</label>
            </value>
            <value>
                <fullName>Abnormal Sound When Turning</fullName>
                <isActive>false</isActive>
                <label>Abnormal Sound When Turning</label>
            </value>
            <value>
                <fullName>Battery Charging Warning Light</fullName>
                <isActive>false</isActive>
                <label>Battery Charging Warning Light</label>
            </value>
            <value>
                <fullName>Black Smoke</fullName>
                <isActive>false</isActive>
                <label>Black Smoke</label>
            </value>
            <value>
                <fullName>Brake sound</fullName>
                <isActive>false</isActive>
                <label>Brake sound</label>
            </value>
            <value>
                <fullName>Check Engine Warning Light</fullName>
                <isActive>false</isActive>
                <label>Check Engine Warning Light</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>