unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tools</label>
    <type>Checkbox</type>
</CustomField>