unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Vehicle_registration__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle registration</label>
    <type>Checkbox</type>
</CustomField>