unpackaged/main/default/objects/Vehicle_Receiving_Info__c/fields/Warning_Triangle__c.field-meta.xml
<CustomField>
    <fullName>Warning_Triangle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warning Triangle</label>
    <type>Checkbox</type>
</CustomField>